# deno

./: .gitignore  Cargo.toml
.github/workflows/: ci.generate.ts  ci.yml
cli/: Cargo.toml  build.rs
cli/args/: flags.rs  mod.rs
cli/lsp/: documents.rs
cli/napi/: js_native_api.rs
cli/npm/managed/resolvers/: local.rs
cli/standalone/: binary.rs
cli/tests/unit/: net_test.ts
cli/tools/lint/: mod.rs
cli/tools/registry/: mod.rs
cli/tsc/: 99_main_compiler.js  mod.rs
cli/tsc/dts/: lib.deno.ns.d.ts  lib.deno_webgpu.d.ts
ext/console/: 01_console.js
ext/fetch/: Cargo.toml
ext/fs/: std_fs.rs
ext/net/: 01_net.js
ext/node/: Cargo.toml  lib.rs
ext/node/polyfills/: http.ts  process.ts
ext/quic/: 01_quic.js  Cargo.toml  lib.deno_quic.d.ts  lib.rs
ext/web/: 06_streams.js
runtime/: Cargo.toml  lib.rs  shared.rs  snapshot.rs  web_worker.rs  worker.rs
runtime/js/: 90_deno_ns.js
test_napi/src/: lib.rs
tests/integration/: js_unit_tests.rs  lsp_tests.rs
tests/napi/src/: lib.rs
tests/node_compat/: config.jsonc
tests/unit/: quic_test.ts  serve_test.ts
tools/: core_import_map.json
tools/node_compat/: TODO.md
